[gd_scene load_steps=14 format=3 uid="uid://cd4gl7geyv4o1"]

[ext_resource type="Script" path="res://common/rocketBAK.gd" id="1_2lt44"]
[ext_resource type="Script" path="res://common/AIController3D.gd" id="3_eyh2g"]
[ext_resource type="Texture2D" uid="uid://cgncjkx3u8l87" path="res://starting_folder/icon.svg" id="3_pnct2"]
[ext_resource type="Script" path="res://addons/godot_rl_agents/sync.gd" id="4_uh753"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_6om5j"]
albedo_color = Color(0.0745098, 0.0313726, 0.258824, 1)
metallic = 1.0
roughness = 0.1

[sub_resource type="CylinderMesh" id="CylinderMesh_2iqvx"]
material = SubResource("StandardMaterial3D_6om5j")

[sub_resource type="BoxShape3D" id="BoxShape3D_tsfjn"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0r71o"]
albedo_color = Color(0.0292643, 0, 0.779029, 1)
metallic = 1.0

[sub_resource type="BoxMesh" id="BoxMesh_cdclm"]
material = SubResource("StandardMaterial3D_0r71o")

[sub_resource type="CylinderMesh" id="CylinderMesh_qung1"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_mrvft"]
albedo_texture = ExtResource("3_pnct2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_oh7vh"]
albedo_color = Color(0.258824, 0.145098, 0.823529, 1)
metallic = 1.0

[sub_resource type="CylinderMesh" id="CylinderMesh_s6r56"]
material = SubResource("StandardMaterial3D_oh7vh")

[node name="rocket" type="RigidBody3D"]
disable_mode = 2
collision_layer = 9
collision_mask = 9
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
lock_rotation = true
max_contacts_reported = 9
script = ExtResource("1_2lt44")

[node name="tower" type="MeshInstance3D" parent="."]
transform = Transform3D(0.410037, 0, 0, 0, 0.834214, 0, 0, 0, 0.496786, 0.0267503, 0.832196, 0.00253439)
mesh = SubResource("CylinderMesh_2iqvx")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1.5, 0, 0, 0, 1.5, 0, 0, 0, 1.5, -0.022, 0.749424, 0)
shape = SubResource("BoxShape3D_tsfjn")

[node name="plate" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.3, 0, 0, 0, 1.5, 0.0193877, 0.299236, -0.0195595)
mesh = SubResource("BoxMesh_cdclm")

[node name="TwistPvot" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0)
rotation_order = 3

[node name="PitchPivot" type="Node3D" parent="TwistPvot"]
transform = Transform3D(0.999696, -0.0171425, 0.0177543, 0.0174524, 0.999696, -0.0174498, -0.0174497, 0.0177543, 0.999691, 0, 0, 0)
rotation_order = 3

[node name="Camera3D" type="Camera3D" parent="TwistPvot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.342, 3.94)
rotation_order = 3

[node name="turret" type="MeshInstance3D" parent="."]
transform = Transform3D(0.735, 0, 0, 0, 0.235958, 0, 0, 0, 0.879373, 0.0420099, 0.619242, 0.00535572)
mesh = SubResource("CylinderMesh_qung1")
surface_material_override/0 = SubResource("StandardMaterial3D_mrvft")

[node name="barrel" type="MeshInstance3D" parent="turret"]
transform = Transform3D(0.24464, 0, 0, 0, -1.29978e-07, -1.09939, 0, 0.63785, -1.03083e-08, 0.0052251, 0.242256, -0.240709)
mesh = SubResource("CylinderMesh_s6r56")
skeleton = NodePath("../..")

[node name="speed_label" type="Label" parent="."]
offset_left = 79.0
offset_top = 468.0
offset_right = 233.0
offset_bottom = 491.0
theme_override_colors/font_color = Color(0.6, 0, 0, 1)
text = "Tank velocity  (x,y,z)"

[node name="height_label" type="Label" parent="."]
offset_left = 76.0
offset_top = 424.0
offset_right = 233.0
offset_bottom = 447.0
theme_override_colors/font_color = Color(0.6, 0, 0, 1)
text = "Tank location (x,y,z) "

[node name="power_node_loc" type="Label" parent="."]
offset_left = 77.0
offset_top = 388.0
offset_right = 230.0
offset_bottom = 411.0
theme_override_colors/font_color = Color(0.6, 0, 0, 1)
text = "Power Node Loc"

[node name="bombs_label" type="Label" parent="."]
offset_left = 84.0
offset_top = 508.0
offset_right = 237.0
offset_bottom = 531.0
theme_override_colors/font_color = Color(0.6, 0, 0, 1)
text = "Daisey points"

[node name="time_label" type="Label" parent="."]
offset_left = 86.0
offset_top = 541.0
offset_right = 239.0
offset_bottom = 564.0
theme_override_colors/font_color = Color(0.6, 0, 0, 1)
text = "Elapsed time
"

[node name="my_speed" type="Label" parent="."]
offset_left = 245.0
offset_top = 446.0
offset_right = 285.0
offset_bottom = 469.0
rotation = -0.0129563
scale = Vector2(1.88045, 2.65341)
theme_override_colors/font_color = Color(0.796078, 0, 0, 1)
text = "0"

[node name="my_height" type="Label" parent="."]
offset_left = 244.0
offset_top = 407.0
offset_right = 284.0
offset_bottom = 430.0
rotation = -0.0129563
scale = Vector2(1.88045, 2.65341)
theme_override_colors/font_color = Color(0.796078, 0, 0, 1)
text = "0"

[node name="power_node_location" type="Label" parent="."]
offset_left = 243.0
offset_top = 369.0
offset_right = 283.0
offset_bottom = 392.0
rotation = -0.0129563
scale = Vector2(1.88045, 2.65341)
theme_override_colors/font_color = Color(0.796078, 0, 0, 1)
text = "0"

[node name="my_bombs" type="Label" parent="."]
offset_left = 247.0
offset_top = 485.0
offset_right = 287.0
offset_bottom = 508.0
rotation = -0.0129563
scale = Vector2(1.88045, 2.65341)
theme_override_colors/font_color = Color(0.796078, 0, 0, 1)
text = "0"

[node name="elapsed_time" type="Label" parent="."]
offset_left = 246.0
offset_top = 525.0
offset_right = 286.0
offset_bottom = 548.0
rotation = -0.0129563
scale = Vector2(1.88045, 2.65341)
theme_override_colors/font_color = Color(0.796078, 0, 0, 1)
text = "0"

[node name="AIController3D" type="Node3D" parent="."]
script = ExtResource("3_eyh2g")

[node name="Sync" type="Node" parent="."]
script = ExtResource("4_uh753")
control_mode = 0
